--- a/xiaowei/1-HTML basis/index.html
+++ b/xiaowei/1-HTML basis/index.html
@@ -5,7 +5,16 @@
 	<title>HTML basis</title>
 </head>
 <body>
-	<h1 style="margin:0 auto"><a href="https://roading.github.io/">个人博客</a></h1>
+	<h1 style="margin:0 auto;max-width: 300px;"><a href="https://roading.github.io/">个人博客</a></h1>
+	<div>
+		<h1>多媒体元素测试</h1>
+		<hr>
+		<object type="application/x-shockwave-flash" data="./flash4594.swf" width="500" height="300" id="flashid" style="visibility: visible;"><param name="base" value="."><param name="wmode" value="Opaque"><param name="allowScriptAccess" value="always"><param name="quality" value="high"><param name="allowNetWorking" value="all"></object>
+		<audio autoplay controls>
+			<source src="./yuanfengjing.mp3" type="audio/mp3">
+    		<source src="./yuanfengjing.ogg" type="audio/ogg">
+		</audio>
+	</div>
 	<div>
 		<h1>标签元素效果</h1>
 		<hr />
@@ -235,15 +244,6 @@
 		<textarea name="desc" cols="30" rows="5" placeholder="请输入个人简介，不少于800字"></textarea><br>
 		<button>安缪测试</button><br>
 		图片按钮<input type="image" src="button.jpg" width="120"><br>
-	</div>
-	<div>
-		<h1>多媒体元素测试</h1>
-		<hr>
-		<iframe height="300" width="450" src='http://player.youku.com/embed/XMjUyNzYzOTY1Mg==' frameborder=0 allowfullscreen></iframe>
-		<audio autoplay controls>
-			<source src=“./yuanfengjing.mp3” type=“audio/mp3”>
-    		<source src=“./yuanfengjing.ogg” type=“audio/ogg”>
-		</audio>
 	</div>
 <div>版权所有&copy;</div>
 </body>
