add the master and course info

--- a/xiaowei/1-HTML basis/index.html
+++ b/xiaowei/1-HTML basis/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 	<h1 style="margin:0 auto;max-width: 300px;"><a href="https://roading.github.io/">个人博客</a></h1>
+	<a href="http://ife.baidu.com/mentor/detail/id/27">小薇导师</a><br>
+	<a href="http://ife.baidu.com/course/detail/id/90">任务一：零基础HTML编码</a>
 	<div>
 		<h1>多媒体元素测试</h1>
 		<hr>
