--- a/xiaowei/1-HTML basis/index.html
+++ b/xiaowei/1-HTML basis/index.html
@@ -6,8 +6,18 @@
 </head>
 <body>
 	<h1 style="margin:0 auto;max-width: 300px;"><a href="https://roading.github.io/">个人博客</a></h1>
-	<a href="http://ife.baidu.com/mentor/detail/id/27">小薇导师</a><br>
-	<a href="http://ife.baidu.com/course/detail/id/90">任务一：零基础HTML编码</a>
+	<table>
+		<tr>
+			<td>
+				任务名称：<a href="http://ife.baidu.com/course/detail/id/90" target="_blank">任务一：零基础HTML编码</td>
+			<td>
+				导师：<a href="http://ife.baidu.com/mentor/detail/id/27" target="_blank">小薇导师</a>
+			</td>
+			<td>
+				学院：<a href="http://ife.baidu.com/college/detail/id/9" target="_blank">小薇学院</a>
+			</td>
+		</tr>
+	</table>
 	<div>
 		<h1>多媒体元素测试</h1>
 		<hr>
@@ -17,23 +27,15 @@
     		<source src="./yuanfengjing.ogg" type="audio/ogg">
 		</audio>
 	</div>
-	<div>
-		<h1>标签元素效果</h1>
-		<hr />
-		<h1>1级标题</h1>
-		<h2>2级标题</h2>
-		<h3>3级标题</h3>
-		<h4>4级标题</h4>
-		<h5>5级标题</h5>
-		<h6>6级标题</h6>
-	</div>
-	<h1>文章元素效果</h1>
-	<hr/>
-	<div>
+	题</h2>
+			<h3>3
+	<div >
+		<h1>文章元素效果</h1>
+		<hr/>
 		<h1>文章1级标题</h1>
 		<h2>文章2级副题</h2>
 		<span>文章作者：</span><em>Firefox MDN</em><br /><span>文章发表时间：</span><b>2017-2-24 18:49:06</b>
-		哈哈上链接吧<p>当你在 web 浏览器中浏览网页时，你看到的最基本的内容是文字。这些文字一般有着一些样式特性，比如不同的文字大小和颜色。在多数情况下，页面还会展示图片或者还可能带有视频；有时候会有一个表单，你可以填写信息（或者搜索内容）；或者可以依据喜好自定义页面的展示效果；页面也经常会带有包含动画效果的内容；页面上有些内容会不断变化而有些内容会保持不变。<a name="maomao" href="https://developer.mozilla.org/zh-CN/docs/Web/Guide/HTML/Introduction">哈哈上链接吧</a>，点击试试！</p><img src="htmlcss.ec85cad580b3bfce.jpg" alt="本地图片显示测试" title="这是它的title属性了" width="500">
+		<p>当你在 web 浏览器中浏览网页时，你看到的最基本的内容是文字。这些文字一般有着一些样式特性，比如不同的文字大小和颜色。在多数情况下，页面还会展示图片或者还可能带有视频；有时候会有一个表单，你可以填写信息（或者搜索内容）；或者可以依据喜好自定义页面的展示效果；页面也经常会带有包含动画效果的内容；页面上有些内容会不断变化而有些内容会保持不变。<a name="maomao" href="https://developer.mozilla.org/zh-CN/docs/Web/Guide/HTML/Introduction">哈哈上链接吧</a>，点击试试！</p><img src="htmlcss.ec85cad580b3bfce.jpg" alt="本地图片显示测试" title="这是它的title属性了" width="500">
 		<p>
 			<img src="http://gss0.baidu.com/9rkZbzqaKgQUohGko9WTAnF6hhy/mms-res/fed/ife/ife_tutor/课程配图.3fb31f3e5af7e8d7.jpg" alt="如果出现这个说明被百度坑啦">
 			是时候来一段内容引用了：
@@ -42,7 +44,7 @@
 			<p>内容太多，颠倒点到为止了！</p>
 		</p>
 	</div>
-	<div>
+	<div >
 		<h1>列表内容测试</h1>
 		<hr>
 		<h2>有序列表</h2>
@@ -86,7 +88,7 @@
 			<dd>dd2</dd>
 		</dl>
 	</div>
-	<div>
+	<div >
 		<h1>图片测试了</h1>
 		<hr>
 		<ul type="none">
@@ -111,17 +113,17 @@
 	  		<p>黄浦江上的的卢浦大桥</p>
 	  		<img src="qiao.gif" />
 		</figure>
-	</div>
-	<h1>标签链接测试</h1>
-	<hr>
-	<div>
+	</div>		
+	<div >
+		<h1>标签链接测试</h1>
+		<hr>
 		小标签：<a href="https://www.baolong.com">baolong</a><br>
 		锚点：<a href="#maomao">返回到本文的第一个a链接处</a><br/>
 		发送邮件：<a href="mailto:funning@yeah.net?cc=test@lll.cc?subject='Hell world'?body='This is my first test program'">没事多叫交流</a>
-	</div>
-	<h1>表格单元测试</h1>
-	<hr>
-	<div>
+	</div>		
+	<div >
+		<h1>表格单元测试</h1>
+		<hr>
 		<table border="1">
 		<caption>2013级课程表</caption>
 			<thead>
@@ -205,7 +207,7 @@
 			</tbody>
 		</table>
 	</div>
-	<div>
+	<div >
 		<h1>表单测试</h1>
 		<hr>
 		<form action="http://www.baidu.com">
@@ -247,6 +249,6 @@
 		<button>安缪测试</button><br>
 		图片按钮<input type="image" src="button.jpg" width="120"><br>
 	</div>
-<div>版权所有&copy;</div>
+	<div>版权所有&copy;</div>
 </body>
 </html>
