xiaowei task2 add task info and url

--- a/xiaowei/2-HTML&CSS basis/index.html
+++ b/xiaowei/2-HTML&CSS basis/index.html
@@ -17,6 +17,17 @@
 			</ul>
 		</div>
 		<h1 class="blog-url"><a href="https://roading.github.io/">个人博客</a></h1>
+		<table>
+			<tr>
+				<td>
+					任务名称：<a href="http://ife.baidu.com/course/detail/id/92" target="_blank">任务二：零基础HTML及CSS编码（一）</td>
+				<td>
+					导师：<a href="http://ife.baidu.com/mentor/detail/id/27" target="_blank">小薇导师</a>
+				</td>
+				<td>
+					学院：<a href="http://ife.baidu.com/college/detail/id/9" target="_blank">小薇学院</a>
+				</td>
+			</tr>
 		<div class="section">
 			<h1>标签元素效果</h1>
 			<hr />
