xiaowei task2 bug fixed

--- a/xiaowei/2-HTML&CSS basis/index.html
+++ b/xiaowei/2-HTML&CSS basis/index.html
@@ -17,7 +17,7 @@
 			</ul>
 		</div>
 		<h1 class="blog-url"><a href="https://roading.github.io/">个人博客</a></h1>
-		<table>
+		<table style="margin:2em auto;">
 			<tr>
 				<td>
 					任务名称：<a href="http://ife.baidu.com/course/detail/id/92" target="_blank">任务二：零基础HTML及CSS编码（一）</td>
@@ -28,6 +28,7 @@
 					学院：<a href="http://ife.baidu.com/college/detail/id/9" target="_blank">小薇学院</a>
 				</td>
 			</tr>
+		</table>
 		<div class="section">
 			<h1>标签元素效果</h1>
 			<hr />
@@ -136,7 +137,7 @@
 				</tr>
 			</table>
 		</div>
-		<div class="section form">
+			<div class="section form">
 			<h1>表单测试</h1>
 			<hr>
 			<form action="#">
@@ -198,7 +199,7 @@
 
 				</table>
 			</form>		
-		</div>		
+		</div>	
 	</div>
 	<div class="footer">版权所有&reg;</div>
 </body>
