binbin task5 optimize

--- a/binbin/task5/index.html
+++ b/binbin/task5/index.html
@@ -70,11 +70,15 @@
           case "ladd":
             if(insert()){
               result.unshift(insert());
+            }else{
+            	isRender=false;
             }
             break;
           case "radd":
             if(insert()){
               result.push(insert());
+            }else{
+            	isRender=false;
             }
             break;
           case "ldel":
