yaoyao task1 optimize

--- a/yaoyao/task1/index.html
+++ b/yaoyao/task1/index.html
@@ -114,13 +114,8 @@
                         if(temp<100)
                             result=true;                            
                 }
-                if(result){
-                    input.classList.value=cName+" iright";
-                    tip.classList.value=cName+" tips "+" tright";
-                }else{                    
-                    input.classList.value=cName+" ierror";
-                    tip.classList.value=cName+" tips "+" terror";
-                }
+                input.classList.value=result?cName+" iright":cName+" ierror";
+                tip.classList.value=result?cName+" tips "+" tright":cName+" tips "+" terror";
             })
         }
     </script>
