yaoyao task1 fixed bug

--- a/yaoyao/task1/index.html
+++ b/yaoyao/task1/index.html
@@ -123,6 +123,7 @@
                     tip.classList.value=cName+" tips "+" terror";
                     tip.innerHTML="格式错误";
                 }
+                event.preventDefault();
             })
         }
     </script>
