yaoyao task1 modified

--- a/yaoyao/task1/index.html
+++ b/yaoyao/task1/index.html
@@ -9,14 +9,8 @@
             font-family: Arial,"Simsun","Microsoft Yahei";
         }
         .validate{
-            width:400px;
-            height:250px;
-            position:absolute;
-            left:50%;
-            margin-left: -200px;
-            top:50%;
-            margin-top: -125px;
-            background-color: #eee;
+            width:450px;
+            margin:50px auto;
         }
         div{
             line-height: 1em;
@@ -69,21 +63,21 @@
             <div>
                 <label>名称：
                     <b><input type="text" value="" class="name1" placeholder="必填,长度为4-16个字符"></b>
-                    <i><button class="name1">验证</button></i>
+                    <button class="name1">验证</button>
                 </label>
             </div>
             <div class="tips name1"></div>
             <div>
                 <label>名称：
                     <b><input type="text" class="name2" placeholder="姓名不能为空"></b>
-                    <i><button class="name2">验证</button></i>
+                    <button class="name2">验证</button>
                 </label>
             </div>
             <div class="tips name2"></div>
             <div>
                 <label>名称：
                     <b><input type="text" class="name3" placeholder="数值小于100"></b>
-                    <i><button class="name3">验证</button></i>
+                    <button class="name3">验证</button>
                 </label>
             </div>
             <div class="tips name3"></div>
